Fixed inability to edit songs because of bad z-index

--- a/public/css/flavors.css
+++ b/public/css/flavors.css
@@ -26,12 +26,17 @@ label {
 	font-size: 14px;
 }
 
+#song-count-span {
+	position: relative;
+	z-index: 3;
+}
+
 #top-veil, #bottom-veil {
 	background-color: #fff;
 	opacity: 0.8;
 	left: 0;
 	right: 0;
-	z-index: -1;
+	z-index: 2;
 
 }
 
@@ -52,6 +57,7 @@ label {
 	position: fixed;
 	padding: 15px;
 	width: calc(100% - 30px);
+	z-index: 3;
 }
 
 .complex-filter-container {
@@ -59,12 +65,14 @@ label {
 	position: fixed;
 	width: 100%;
 	top: 75px;
+	z-index: 3;
 }
 
 #simple-filters {
 	width: 100%;
 	padding: 15px;
 	position: fixed;
+	z-index: 3;
 	top: 200px;
 }
 
@@ -80,8 +88,8 @@ label {
 #songdata {
 	position: absolute;
 	top: 250px;
-	z-index: -2;
 	margin: 15px 15px 35px 15px;	// bottom space for #song-count-container
+	z-index: 1;
 }
 
 table {
@@ -121,7 +129,6 @@ th {
 
 .slider {
 	width: 400px;
-	/*z-index: -10*/
 }
 
 pre {
